--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,11 @@ OPENROUTER_KEY=your_openrouter_key
 ELEVENLABS_API_KEY=your_elevenlabs_api_key
 REPLICATE_API_TOKEN=your_replicate_api_token
 HEDRA_API_KEY=your_hedra_api_key
+ZONOS_URL=your_zonos_gradio_url
 
 # Optional configuration
 OPENROUTER_HTTP_REFERER=your_http_referer
 DEFAULT_LLM=anthropic  # Can be "anthropic", "openrouter", or "lmstudio"
+
+# Path to the InsightFace model for ReActor in Stable Diffusion
+INSIGHTFACE_MODEL_PATH="C:/path/to/your/inswapper_128.onnx"
