--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,12 @@
 # Discord configuration
 DISCORD_BOT_TOKEN=your_discord_bot_token
-DISCORD_USER_ID=your_discord_user_id
+
+# Discord Users Configuration
+# Add users with USER_#_NAME and USER_#_DISCORD_ID (starting from 1)
+USER_1_NAME=your_username
+USER_1_DISCORD_ID=your_discord_user_id
+# USER_2_NAME=another_username
+# USER_2_DISCORD_ID=another_discord_user_id
 
 # API Keys
 ANTHROPIC_API_KEY=your_anthropic_api_key
@@ -15,4 +21,9 @@ OPENROUTER_HTTP_REFERER=your_http_referer
 DEFAULT_LLM=anthropic  # Can be "anthropic", "openrouter", or "lmstudio"
 
 # Path to the InsightFace model for ReActor in Stable Diffusion
-INSIGHTFACE_MODEL_PATH="C:/path/to/your/inswapper_128.onnx"
+INSIGHTFACE_MODEL_PATH="./models/insightface/inswapper_128.onnx"
+
+# Local Service URLs
+STABLE_DIFFUSION_URL=http://127.0.0.1:7860/sdapi/v1/txt2img
+LMSTUDIO_URL=http://localhost:1234/v1/chat/completions
+ZONOS_URL=http://localhost:7860
