--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,31 @@
+# Discord Bot
 discord.py==2.3.2
-aiohttp
+
+# Async HTTP
+aiohttp==3.9.1
+
+# Image Processing
 Pillow==10.1.0
+opencv-python==4.8.1.78
+
+# Environment & Configuration
 python-dotenv==1.0.0
+
+# AI/ML Services
 replicate==0.22.0
-asyncio==3.4.3
 anthropic==0.18.0
 openai==1.6.1
 elevenlabs==0.2.27
+
+# Utilities
 python-dateutil==2.8.2
-requests
+requests==2.31.0
 typing-extensions>=4.5.0  # Required for better type hints
 psutil>=5.9.0  # Required for process management
-playsound
-gradio_client  # Required for Zonos TTS
-pydub
-opencv-python
+
+# Media
+playsound==1.3.0
+pydub==0.25.1
+
+# TTS (Zonos)
+gradio_client==0.7.1  # Required for Zonos TTS
