--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,11 @@ anthropic==0.18.0
 openai==1.6.1
 elevenlabs==0.2.27
 
+# Web Server
+fastapi
+uvicorn
+python-multipart
+
 # Utilities
 python-dateutil==2.8.2
 requests==2.31.0
