added wavespeed API and video models as options.

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,7 @@ ANTHROPIC_API_KEY=your_anthropic_api_key
 OPENROUTER_KEY=your_openrouter_key
 ELEVENLABS_API_KEY=your_elevenlabs_api_key
 REPLICATE_API_TOKEN=your_replicate_api_token
+WAVESPEED_API_KEY=your_wavespeed_api_key
 HEDRA_API_KEY=your_hedra_api_key
 ZONOS_URL=your_zonos_gradio_url
 
