feat: Add Chub.ai character importer and Wavespeed video models Chub Importer: - Import Chub.ai JSON character cards from launcher - LLM auto-generates image prompts from character descriptions - LLM generates scenarios if card doesn't have them - Generate reference portrait for face swap (XL mode) - Delete imported characters from launcher - Launcher starts maximized - Server loads imported characters on startup Video: - Added Wavespeed video model options (InfiniteTalk, Hunyuan Avatar) - Updated web UI with video model dropdown Other: - Fixed default OpenRouter model - Updated README with Chub import docs - Added Wavespeed API key to .env.example New files: chub_importer.py

--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,6 @@ INSIGHTFACE_MODEL_PATH="./models/insightface/inswapper_128.onnx"
 STABLE_DIFFUSION_URL=http://127.0.0.1:7860/sdapi/v1/txt2img
 LMSTUDIO_URL=http://localhost:1234/v1/chat/completions
 ZONOS_URL=http://localhost:7860
+# Ngrok configuration for public access
+NGROK_AUTH_TOKEN=your_ngrok_auth_token
+USE_NGROK=false
