--- a/requirements.txt
+++ b/requirements.txt
@@ -30,7 +30,7 @@ psutil>=5.9.0  # Required for process management
 pyngrok==7.1.2  # Required for Ngrok tunneling
 
 # Media
-playsound==1.3.0
+playsound3>=2.0
 pydub==0.25.1
 
 # TTS (Zonos)
